// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentTimer model should be able to reset 1`] = `
Array [
  Object {
    "elapseTime": 0,
    "intervalId": 3,
    "isRunning": true,
  },
  Object {
    "elapseTime": 1,
    "intervalId": 3,
    "isRunning": true,
  },
  Object {
    "elapseTime": 1,
    "intervalId": null,
    "isRunning": false,
  },
  Object {
    "elapseTime": 1,
    "intervalId": 4,
    "isRunning": true,
  },
  Object {
    "elapseTime": 2,
    "intervalId": 4,
    "isRunning": true,
  },
  Object {
    "elapseTime": 2,
    "intervalId": null,
    "isRunning": false,
  },
  Object {
    "elapseTime": 0,
    "intervalId": null,
    "isRunning": false,
  },
]
`;

exports[`CurrentTimer model should be able to stop 1`] = `
Array [
  Object {
    "elapseTime": 0,
    "intervalId": 2,
    "isRunning": true,
  },
  Object {
    "elapseTime": 1,
    "intervalId": 2,
    "isRunning": true,
  },
  Object {
    "elapseTime": 1,
    "intervalId": null,
    "isRunning": false,
  },
]
`;
